[gd_scene load_steps=9 format=3 uid="uid://qv8tgnmqw4af"]

[ext_resource type="Script" path="res://scenes/container_on_table.gd" id="1_28suh"]
[ext_resource type="Texture2D" uid="uid://c1jrklblnm10f" path="res://art/indicators/UpArrow.png" id="2_tb1u2"]
[ext_resource type="AudioStream" uid="uid://dhwm8k8b3ytb1" path="res://audio/get_container/u1.wav" id="3_dygpx"]
[ext_resource type="AudioStream" uid="uid://6t2dqqeyxnhf" path="res://audio/get_container/u2.wav" id="4_lpwpf"]
[ext_resource type="AudioStream" uid="uid://b7342aaajkkxy" path="res://audio/get_container/u3.wav" id="5_mugbv"]
[ext_resource type="AudioStream" uid="uid://bugxq1efe3ph" path="res://audio/get_container/u4.wav" id="6_vgndu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uok0p"]
radius = 95.3363

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_d864p"]
random_pitch = 1.3
streams_count = 4
stream_0/stream = ExtResource("3_dygpx")
stream_0/weight = 1.0
stream_1/stream = ExtResource("4_lpwpf")
stream_1/weight = 1.0
stream_2/stream = ExtResource("5_mugbv")
stream_2/weight = 1.0
stream_3/stream = ExtResource("6_vgndu")
stream_3/weight = 1.0

[node name="ContainerOnTable" type="Node2D"]
script = ExtResource("1_28suh")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_uok0p")

[node name="UpArrow" type="Sprite2D" parent="."]
position = Vector2(13, -44)
texture = ExtResource("2_tb1u2")

[node name="GetContainerAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_d864p")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
